Project

General

Profile

Actions

Bug #16970

closed

ImageReplayer::is_replaying does not include flush state

Added by Jason Dillaman over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #17005: jewel: ImageReplayer::is_replaying does not include flush state ResolvedLoïc DacharyActions
Actions #1

Updated by Jason Dillaman over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #17005: jewel: ImageReplayer::is_replaying does not include flush state added
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF